2010-08-17  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Tony Chang.

        selectionStart clobbered if textarea isn't focused
        https://bugs.webkit.org/show_bug.cgi?id=43814

        * fast/forms/text-control-select-blurred-expected.txt: Added.
        * fast/forms/text-control-select-blurred.html: Added.

2010-08-17  Dmitry Titov  <dimich@chromium.org>

        Reviewed by David Levin.

        MessagePort.close() crashes if the owning context was destroyed.
        https://bugs.webkit.org/show_bug.cgi?id=43140

        * fast/events/message-port-context-destroyed-expected.txt: Added.
        * fast/events/message-port-context-destroyed.html: Added.

2010-08-17  Victoria Kirst  <vrk@google.com>

        Unreviewed. Build fix.

        Rebaseline straggler Mac UI video regressions.
        Fixing test expectations to match output from r65215 bug fix.

        https://bugs.webkit.org/show_bug.cgi?id=44134

        * platform/chromium-mac/fast/layers/video-layer-expected.checksum:
        * platform/chromium-mac/fast/layers/video-layer-expected.png:
        * platform/chromium-mac/media/video-empty-source-expected.checksum:
        * platform/chromium-mac/media/video-empty-source-expected.png:
        * platform/chromium/test_expectations.txt:

2010-08-17  John Gregg  <johnnyg@google.com>

        Unreviewed, test expectations.

        Skip the filltable-*.html tests on mac and windows.  They have no expectations, so expecting
        them to FAIL is insufficient to make the bots happy.

        * platform/chromium/test_expectations.txt:

2010-08-17  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Reviewed by NOBODY.

        [Qt] Skip media/video-poster-delayed.html

        The QtMultimedia backend has issues with video size hints, skip the test
        until this is sorted out.

        * platform/qt/Skipped:

2010-08-17  Fady Samuel  <fsamuel@chromium.org>

        Reviewed by David Hyatt.
